Fixed compilation error caused by accidental usage of Java16 method https://github.com/jakartaee/faces/issues/1507 -- we still need to bump Java version of Faces 5.0 project to align with Jakarta EE 11